Apollo ETS, Deprecate old parts
Update ETS parts, mark old Apollo parts as deprecated

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -90,6 +90,46 @@ Localization
 		#ApolloSMB2BDBBayJettison = Jettison SIM Bay Door
 
 		//	============================================================================
+		//	BDB Apollo Block 3+
+		//	============================================================================
+		//		ROC-ApolloCMBDBBlockIII
+		#rocApolloCMBDBBlockIIIDesc = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
+		#rocApolloCMBDBBlockIIITitle = Apollo Block III+ Command Module (CM)
+		//	============================================================================
+		//		ROC-ApolloHGABlockIII
+		#rocApolloHGABlockIIITitle = Apollo Block III High Gain Antenna
+		#rocApolloHGABlockIIIDesc = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+		//		ROC-ApolloHGABlockV
+		#rocApolloHGABlockVTitle = Apollo Block V High Gain Antenna
+		#rocApolloHGABlockVDesc = A collapsible relay antenna consisting of a high gain dish, for transmitting the many exciting things you've discovered. Intended to be placed on the mounting bracket of the Apollo Service Engine Block V. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+		//		ROC-ApolloHSBDBBlockIII
+		#rocApolloHSBDBBlockIIITitle = Apollo Block III+ Heatshield
+		#rocApolloHSBDBBlockIIIDesc = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
+		//	============================================================================
+		//		ROC-ApolloMissionModule
+		#rocApolloMissionModuleTitle = Apollo Block III+ Mission Module
+		#rocApolloMissionModuleDesc = In order to increase the living space and mission duration of the Apollo Block III CSM. This mission module is essentially several more cubic meters of living space for the crew. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+		//		ROC-ApolloMissionModule4
+		#rocApolloMissionModule4Title = Apollo Block IV Mission Module
+		#rocApolloMissionModule4Desc = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
+		//	============================================================================
+		//		ROC-ApolloSMBlockIII
+		#rocApolloSMBlockIIITitle = Apollo Block III+ Service Module
+		#rocApolloSMBlockIIIDesc = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO and the Service Module was decreased in size and weight. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+		//		ROC-ApolloSMDBDBlockIV
+		#rocApolloSMBlockIVTitle = Apollo Block IV Service Module
+		#rocApolloSMBlockIVDesc = Enlarged service module to increase cargo capacity of Apollo Block 4. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+		//		ROC-ApolloSolarBlockV
+		#rocApolloSolarBlockVTitle = Apollo Block V Solar Array
+		#rocApolloSolarBlockVDesc = Extendable sun-tracking Level 3 solar panel used for the Block V Apollo CSM. 8.05m^2. FICTIONAL (Eyes Turned Skyward)
+		//	============================================================================
+
+		//	============================================================================
 		//	BDB LEM
 		//	============================================================================
 		//		ROC-LEMAscentBDB
