--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloActiveDockingMechanism(Dprct).cfg
@@ -34,9 +34,9 @@ PART
 	cost = 2000
 	category = Coupling
 	subcategory = 0
-	title = Apollo Docking Mechanism Probe
+	title = Deprecated
 	manufacturer = North American Aviation
-	description = Once soft docking is achieved and the vessels properly aligned, retract the probe to hard dock and establish a solid connection. IT WILL ONLY WORK WITH THE Apollo Docking Drogue.
+	description = Do not use this part.
 	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	bulkheadProfiles = size0
