--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler(Dprct).cfg
@@ -39,9 +39,9 @@ PART
 	cost = 200
 	category = Coupling
 	subcategory = 0
-	title = Apollo Command/Service Module Decoupler
+	title = Deprecated
 	manufacturer = North American Aviation
-	description = This is used to decouple the Command Module from the Service Module prior to reentry. This one has been seperated from the Service Module, to allow you to attatch whatever you want to your Apollo capsule
+	description = Do not use this part
 	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	bulkheadProfiles = size2
