--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -12,14 +12,14 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_HGA
-		rotation = 0.0, -60.0, 0.0
+		model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block3_highGain
 	}
 
 	scale = 1
 	rescaleFactor = 1.5646
 
-	node_attach = 0.0, 0.04, 0.0, 0.0, 1.0 , 0.0
+	node_stack_side = 0.0, 0.0, 0.07, 0.0, 0.0, -1.0, 0
+	node_attach = 0.0, 0.0369, 0.0, 0.0, 1.0 , 0.0
 
 	attachRules = 1,1,0,0,1
 
@@ -32,9 +32,11 @@ PART
 	cost = 1000
 	category = Communication
 	subcategory = 0
-	title = Apollo Block III High Gain Antenna
-	manufacturer = Rockwell International
-	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
+	title = #rocApolloHGABlockIIITitle	//Apollo Block III High Gain Antenna
+	manufacturer = #roMfrRockwell
+	description = #rocApolloHGABlockIIIDesc	//A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
+	specLevel = concept	//ETS Block III is effectively an amalgamation of various Skylab/VFB/AAP proposals
+
 	tags = apollo, block-III, block-3, eyes turned skyward
 
 	bulkheadProfiles = srf
@@ -59,12 +61,16 @@ PART
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = extend
-		isOneShot = false
-		startEventGUIName = Extend Antenna
-		endEventGUIName = Retract Antenna
-		actionGUIName = Toggle Antenna
+		name = ModuleDeployableAntenna
+		animationName = deploy
+		pivotName = tracking
+		trackingSpeed = 1
+		trackingMode = HOME
+		showStatus = true
+		isTracking = true
+		extendActionName = #roAntOn
+		retractActionName = #roAntOff
+		extendpanelsActionName = #roAntToggle
 		allowAnimationWhileShielded = False
 	}
 
