--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockV.cfg
@@ -1,29 +1,22 @@
 +PART[ROC-ApolloHGABlockIII]:FIRST
 {
 	@name = ROC-ApolloHGABlockV
-	%title = Apollo Block V High Gain Antenna
-	@manufacturer = Boeing
-	@description = A collapsible relay antenna consisting of a high gain dish, for transmitting the many exciting things you've discovered. Intended to be placed on the mounting bracket of the Apollo Service Engine Block V. FICTIONAL (Eyes Turned Skyward)
+	%title = #rocApolloHGABlockVTitle	//Apollo Block V High Gain Antenna
+	@manufacturer = #roMfrBoeing
+	@description = #rocApolloHGABlockVDesc	//A collapsible relay antenna consisting of a high gain dish, for transmitting the many exciting things you've discovered. Intended to be placed on the mounting bracket of the Apollo Service Engine Block V. FICTIONAL (Eyes Turned Skyward)
+	@specLevel = altHist
 
 	%RSSROConfig = True
 
 	@MODEL
 	{
-		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_HGA
-		%rotation = 0.0, 45.0, 0.0
+		@model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block5_highGain
 	}
 
 	@rescaleFactor = 1.5646
 	@mass = 0.025
 
-	%TechRequired = commandModules
-	
 	%tags = apollo, block-V, block-5, eyes turned skyward
-
-	@MODULE[ModuleAnimateGeneric]
-	{
-		@animationName = deploy
-	}
 
 	@MODULE[ModuleRTAntenna]:NEEDS[RemoteTech]
 	{
