--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBDBBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBDBBlockIII+.cfg
@@ -1,81 +1,79 @@
 PART
 {
+	name = ROC-ApolloHSBDBBlockIII
 	module = Part
-	name = ROC-ApolloLESCover
-	author = DECQ, Pap
-	
-	RSSROConfig = true
-	
+	author = DECQ, capkirk
+
+	RSSROConfig = True
+
 	//	============================================================================
 	//	Model and Dimensions
 	//	============================================================================
-	
+
 	MODEL
 	{
-		model = ROCapsules/Assets/DECQ/Apollo/LES_Cover
-		scale = 1.0, 1.0, 1.0
-		rotation = 0, 180, 0
+		model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Heatshield
 	}
-	
-	scale = 1.0
-	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, 0.42, 0.0, 0.0, -1.0, 0.0, 1
+	scale = 1.0
+	rescaleFactor = 1.5646
+
+	node_stack_top = 0.0, 0.14489, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, 0.0783, 0.0, 0.0, -1.0, 0.0, 2
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
-	
-	bulkheadProfiles = size1, size2
-		
+
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
-	
-	title = Apollo LES Booster Protection Cover (BPC)
-	manufacturer = Lockheed
-	description = The booster protection cover protects the Apollo Command Module from the exhaust of the LES abort motor. Also doubles as a thermal protection system during the early phases of a launch.
-	
-	mass = 0.318
-	
-	category = Utility
+
+	title = #rocApolloHSBDBBlockIIITitle	//Apollo Heatshield
+	manufacturer = #roMfrRockwell
+	description = #rocApolloHSBDBBlockIIIDesc	//LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
+	specLevel = concept	//ETS Block III is effectively an amalgamation of various Skylab/VFB/AAP proposals
+
+	mass = 0.191		//Just let autoconfig tool set mass
+
+	category = Thermal
 	subcategory = 0
-	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, sm, csm, saturn, v, les, escape
-	
-	TechRequired = unlockParts
-	cost = 150
+
+	tags = apollo heat shield heatshield reentry
+
+	TechRequired = start
 	entryCost = 1
-	
-	stagingIcon = DECOUPLER_VERT
-	stageOffset = 1
-	childStageOffset = 1
+	cost = 1
 	
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-		
-	crashTolerance = 8
-	maxTemp = 673.15
-	skinMaxTemp = 773.15
 	
-	fuelCrossFeed = false
-	
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	breakingForce = 72
+	breakingTorque = 72
+	crashTolerance = 10
+	fuelCrossFeed = False
+	stageOffset = 1
+	childStageOffset = 1
+
+	resetHeatShieldMass = True
+	resetHeatShieldAblator = True
+	heatShieldTag = Gemini
+	heatShieldDiameter = 3.91
+
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
-	
+
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 0
-		explosiveNodeID = bottom
+		name = ModuleAblator
 	}
-	
+
 	//	============================================================================
 	//	Animations and Textures
 	//	============================================================================
-	
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-	sound_decoupler_fire = decouple
 	
 }
