--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+(Dprct).cfg
@@ -1,12 +1,12 @@
 PART
 {
-	name = ROC-ApolloHS
+	name = ROC-ApolloHSBlockIII+
 	module = Part
-	author = DECQ, capkirk
+	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
 
-	MODEL // Model for the Heat Shield
+	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
 		scale = 1.0, 1.0, 1.0
@@ -21,10 +21,20 @@ PART
 	cost = 1
 	category = Thermal
 	subcategory = 0
-	title = Apollo Heatshield
-	manufacturer = North American Aviation
-	description = Heatshield for the Apollo Capsule.
+	title = Deprecated
+	manufacturer = Rockwell International
+	description = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
+
 	attachRules = 1,0,1,0,0
+
+	tags = apollo heat shield heatshield reentry
+
+	bulkheadProfiles = size1p2
+
+	//	============================================================================
+	//	Thermo, Durability
+	//	============================================================================
+
 	mass = 0.050
 	dragModelType = default
 	maximum_drag = 0.2
@@ -36,16 +46,13 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	thermalMassModifier = 1.0
 	bulkheadProfiles = size1p2
 
-	tags = apollo heat shield heatshield reentry
-
 	//use new heat shield tagging system to configure the shield instead
-	resetHeatShieldMass = True
-	resetHeatShieldAblator = True
-	heatShieldTag = Lunar
 	heatShieldDiameter = 3.91
+	heatShieldTag = Gemini
+	resetHeatShieldAblator = True
+	resetHeatShieldMass = True
 	
 	MODULE
 	{
