--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -12,7 +12,7 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_MissionModule
+		model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block3_MissionModule
 	}
 
 	INTERNAL
@@ -20,10 +20,10 @@ PART
 		name = crewCabinInternals
 	}
 
-	rescaleFactor = 1.56463
+	rescaleFactor = 1.5646
 
-	node_stack_top = 0.0, 0.986899, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.906899, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.8514, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.0894, 0.0, 0.0, -1.0, 0.0, 2
 
 	attachRules = 1,0,1,1,0
 
@@ -33,12 +33,13 @@ PART
 
 	TechRequired = improvedCapsules
 	CrewCapacity = 2
-	cost = 7000
+	cost = 0
 	category = Pods
 	subcategory = 0
-	title = Apollo Block III+ Mission Module
-	manufacturer = Rockwell International
-	description = In order to increase the living space and mission duration of the Apollo Block III CSM. This mission module is essentially several more cubic meters of living space for the crew. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization. FICTIONAL (Eyes Turned Skyward)
+	title = #rocApolloMissionModuleTitle	//Apollo Block III+ Mission Module
+	manufacturer = #roMfrRockwell
+	description = #rocApolloMissionModuleDesc	//In order to increase the living space and mission duration of the Apollo Block III CSM. This mission module is essentially several more cubic meters of living space for the crew. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization. FICTIONAL (Eyes Turned Skyward)
+	specLevel = altHist
 	tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
 	vesselType = Ship
@@ -48,7 +49,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 3.25
+	mass = 3.00		//drop 250 kg for LS/LS tanks and supplies
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -63,12 +64,20 @@ PART
 	//	Modules and Resources
 	//	============================================================================
 
+	MODULE:NEEDS[ConnectedLivingSpace]
+	{
+		name = ModuleConnectedLivingSpace
+		passable = true
+		passableWhenSurfaceAttached = true
+		surfaceAttachmentsPassable = true
+	}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
-		type = ServiceModule
+		type = SM-IV
 		volume = 750
-		basemass = -1
+		basemass = 3.0	//drop 250 kg for LS/LS tanks and supplies
 	}
 
 	MODULE
@@ -98,61 +107,120 @@ PART
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Block3MM_Window_Emit
-		startEventGUIName = Lights On
-		endEventGUIName = Lights Off
-		actionGUIName = Toggle Lights
-		defaultActionGroup = Light
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitchNode
+		switcherDescription = Node
+		switcherDescriptionPlural = Nodes
+		affectDragCubes = True
+		affectFARVoxels = True
+
+		SUBTYPE
+		{
+			name = Recessed Lower Node
+			transform = RecessedCap
+			NODE
+			{
+				name =  bottom
+				position = 0.0, -0.52125, 0.0
+			}
+		}
+
+		SUBTYPE
+		{
+			name = Flush Lower Node
+			transform = FlatCap
+		}
 	}
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Block3MM_Spotlight_Emit
-		actionGUIName = Toggle Spotlight
-		startEventGUIName = Spotlight On
-		endEventGUIName = Spotlight Off
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName =  Toggle Lights
+		eventOnName = Lights On
+		eventOffName = Lights Off
+		toggleAction = True
 		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
 }
 
 +PART[ROC-ApolloMissionModule]:FIRST
 {
 	@name = ROC-ApolloMissionModule4
-	@author = CobaltWolf
 
 	@MODEL
 	{
-		@model = ROCapsules/Assets/BDB/bluedog_Apollo_Block4_MissionModule
+		@model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block4_MissionModule
 	}
 
-	@node_stack_top = 0.0, 1.02, 0.0, 0.0, 1.0, 0.0, 2
-	@node_stack_bottom = 0.0, -1.02, 0.0, 0.0, -1.0, 0.0, 2
+	@node_stack_top = 0.0, 0.96904, 0.0, 0.0, 1.0, 0.0, 2
+	@node_stack_bottom = 0.0, -1.1328, 0.0, 0.0, -1.0, 0.0, 2
 
-	@TechRequired = composites
-	@entryCost = 1400
-	@cost = 10000
-
-	@title = Apollo Block IV Mission Module
-	@description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
+	@title = #rocApolloMissionModule4Title	//Apollo Block IV Mission Module
+	@description = #rocApolloMissionModule4Desc	//Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
 
 	%tags = apollo, block-III, block-3, block-V, block-5, eyes turned skyward
 
-	@mass = 4.5
+	@mass = 4.25	//drop 250 kg for LS/LS tanks and supplies
 
 	@MODULE[ModuleFuelTanks]
 	{
+		@basemass = 4.25	//drop 250 kg for LS/LS tanks and supplies
 		@volume = 2500
 	}
 
-	@MODULE[ModuleAnimateGeneric]:HAS[#animationName[Block3MM_Window_Emit]]
-	{
-		@animationName = Block4MM_Window_Emit
-	}
+	!MODULE[ModuleB9PartSwitch],* {}
 
-	@MODULE[ModuleAnimateGeneric]:HAS[#animationName[Block3MM_Spotlight_Emit]]
+	MODULE
 	{
-		@animationName = Block4MM_Spotlight_Emit
+		name = ModuleB9PartSwitch
+		moduleID = meshSwitchNode
+		switcherDescription = Node
+		switcherDescriptionPlural = Nodes
+		affectDragCubes = True
+		affectFARVoxels = True
+
+		SUBTYPE
+		{
+			name = Recessed Lower Node
+			transform = RecessedCap
+			NODE
+			{
+				name =  bottom
+				position = 0.0, -0.52125, 0.0
+			}
+		}
+
+		SUBTYPE
+		{
+			name = Flush Lower Node
+			transform = FlatCap
+		}
 	}
 }
