--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -12,27 +12,29 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_SolarPanels
+		model = ROCapsules/Assets/BDB/Apollo/bluedog_Apollo_Block5_SolarPanel
 	}
 
 	rescaleFactor = 1.5646
 
-	node_attach = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0
+	node_stack_side = 0.0, 0.071816, 0.0, 0.0, 0.0, -1.0, 0
+	node_attach = 0.0, 0.071816, 0.0, 0.0, 1.0, 0.0
 
-	attachRules = 0,1,0,0,1
+	attachRules = 1,1,0,0,1
 
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
 
 	TechRequired = spaceStationSolarPanels
-	entryCost = 3800
-	cost = 2000
+	entryCost = 0
+	cost = 0
 	category = Electrical
 	subcategory = 0
-	title = Apollo Block V Solar Array
-	manufacturer = Boeing
-	description = Extendable sun-tracking Level 3 solar panel used for the Block V Apollo CSM. 8.05m^2. FICTIONAL (Eyes Turned Skyward)
+	title = #rocApolloSolarBlockVTitle	//Apollo Block V Solar Array
+	manufacturer = #roMfrBoeing
+	description = #rocApolloSolarBlockVDesc	//Extendable sun-tracking Level 3 solar panel used for the Block V Apollo CSM. 8.05m^2. FICTIONAL (Eyes Turned Skyward)
+	specLevel = altHist
 	tags = apollo, block-V, block-5, eyes turned skyward
 
 	bulkheadProfiles = srf
@@ -65,7 +67,7 @@ PART
 		retractable = false
 		animationName = deploy
 		raycastTransformName = sunCatcher
-		pivotName = pivot
+		pivotName = tracking
 	}
 
 	useSolarConfig = true
