--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS(Dprct).cfg
@@ -31,7 +31,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo CM Forward Heat Shield
+	title = Deprecated
 	manufacturer = North American Aviation
 	description = The forward heat shield and docking probe for the Apollo Command Module. After soft docking the probe is retracted, allowing the two spacecraft to dock hard. It can also be extended after undocking to push them apart. Attach this to the top of the CM after placing the Drogue and Main Parachutes.
 	
