--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHS(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHS(Dprct).cfg
@@ -1,12 +1,12 @@
 PART
 {
-	name = ROC-ApolloHSBlockIII+
+	name = ROC-ApolloHS
 	module = Part
-	author = CobaltWolf, capkirk
+	author = DECQ, capkirk
 
 	RSSROConfig = True
 
-	MODEL
+	MODEL // Model for the Heat Shield
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
 		scale = 1.0, 1.0, 1.0
@@ -21,20 +21,10 @@ PART
 	cost = 1
 	category = Thermal
 	subcategory = 0
-	title = Apollo Block III+ Heatshield
-	manufacturer = Rockwell International
-	description = LEO Heatshield for the Apollo Block III+ Capsule. A lighter heat shield for use with LEO operations.
-
+	title = Deprecated
+	manufacturer = North American Aviation
+	description = Heatshield for the Apollo Capsule.
 	attachRules = 1,0,1,0,0
-
-	tags = apollo heat shield heatshield reentry
-
-	bulkheadProfiles = size1p2
-
-	//	============================================================================
-	//	Thermo, Durability
-	//	============================================================================
-
 	mass = 0.050
 	dragModelType = default
 	maximum_drag = 0.2
@@ -46,13 +36,16 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
+	thermalMassModifier = 1.0
 	bulkheadProfiles = size1p2
 
+	tags = apollo heat shield heatshield reentry
+
 	//use new heat shield tagging system to configure the shield instead
-	heatShieldDiameter = 3.91
-	heatShieldTag = Gemini
-	resetHeatShieldAblator = True
 	resetHeatShieldMass = True
+	resetHeatShieldAblator = True
+	heatShieldTag = Lunar
+	heatShieldDiameter = 3.91
 	
 	MODULE
 	{
