--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloLES(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloLES(Dprct).cfg
@@ -36,7 +36,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo Launch Escape System (LES)
+	title = Deprecated
 	manufacturer = Lockheed
 	description = The abort motor of the LES is a powerful solid rocket motor, designed specifically to carry away the Apollo Command Module in the case of a pad or a low altitude flight abort. The pitch motor of the LES imparts a small attitude change to the Apollo Command Module during an abort. This ensures that the CM will have sufficient clearance from the launch vehicle after the LES abort motor burns out.
 	
