--- a/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/TU_Support_LEMBDB.cfg
@@ -1130,3 +1130,37 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	%MODULE[TUPartVariant] {}
 	%MODULE[SSTURecolorGUI] {}
 }
+
+KSP_MODEL_SHADER
+{
+	name = ROC-LEMEngines
+
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_Ascent_Engine
+	model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_Descent_Engine
+
+	MATERIAL
+	{
+		shader = TU/Metallic
+
+		excludeMesh = DepthMask
+		excludeMesh = innerGlow
+		excludeMesh = innerGlow 1
+
+
+		PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
