--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockV(Dprct).cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-ApolloEngineBlockIII
+	name = ROC-ApolloEngineBlockV
 	module = Part
 	author = CobaltWolf
 
@@ -15,7 +15,7 @@ PART
 	breakingForce = 10000
 	breakingTorque = 10000
 
-	engineType = LMAE
+	engineType = LMDE
 
 	//	============================================================================
 	//	Model and Dimensions
@@ -23,8 +23,8 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceEngine
-		rotation = 0.0, -90.0, 0.0
+		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_ServiceEngine
+		rotation = 0.0, 90.0, 0.0
 	}
 
 	scale = 1
@@ -32,7 +32,7 @@ PART
 
 	node_stack_top = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_top2 = 0.0, 0.038, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom = 0.0, -0.84, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_bottom = 0.0, -1.046, 0.0, 0.0, -1.0, 0.0, 2
 
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
@@ -44,10 +44,10 @@ PART
 	TechRequired = unlockParts
 	cost = 150
 	entryCost = 1
-	title = Apollo Block III Service Engine (LMAE)
-	manufacturer = Bell / Rocketdyne
-	description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
-	tags = apollo, block-III, block-3, lmae, eyes turned skyward
+	title = Deprecated
+	manufacturer = TRW
+	description = Deeply throttleable pressure-fed vacuum engine used for the descent module of the Apollo lunar lander. Uses storable propellants which are not subject to boil-off, but are far less efficient than hydrolox or even kerolox. The later variant (TR-201) was used on Delta as an upper stage engine (on Delta P series); this was a low-cost model with more restarts (4 instead of 2) and slightly higher thrust but lower efficiency and no throttling capability. In the alternate Eyes Turned Skyward universe it was used for the Apollo Block V Service Module. FICTIONAL (Eyes Turned Skyward)
+	tags = apollo, block-V, block-5, tr-201, eyes turned skyward
 
 	//	============================================================================
 	//	Thermo, Durability
@@ -76,6 +76,15 @@ PART
 
 	MODULE
 	{
+		name = ModuleGimbal
+		gimbalTransformName = thrustTransform
+		gimbalRange = 4.0
+		useGimbalResponseSpeed = True
+		gimbalResponseSpeed = 15
+	}
+
+	MODULE
+	{
 		name = ModuleSurfaceFX
 		thrustProviderModuleIndex = 0
 		fxMax = 0.6
@@ -93,35 +102,38 @@ PART
 	MODULE
 	{
 		name = FXModuleAnimateThrottle
-		animationName = LEM_spsA_Emit_Anim
+		animationName = LEM_spsD_Emit_Anim
 		dependOnEngineState = True
 		responseSpeed = 0.05
 	}
 }
 
 // Change the name, description and mass so it is set after the RO Engines
-@PART[ROC-ApolloEngineBlockIII]:AFTER[RealismOverhaulEngines]
+@PART[ROC-ApolloEngineBlockV]:AFTER[RealismOverhaulEngines]
 {
-	@mass = 0.0979 // We'll say it needs to be 20% larger with structure than on the LEM
-	@title = Apollo Block III Service Engine (LMAE)
-	%manufacturer = Bell / Rocketdyne
-	@description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
+	@mass = 0.179
+	@title = Deprecated
+	%manufacturer = TRW
+	@description = Do not use this part
 
-	MODULE
+	@MODULE[ModuleEngineConfigs]
 	{
-		name = ModuleGimbal
-		gimbalTransformName = thrustTransform
-		gimbalRange = 4.0
-		useGimbalResponseSpeed = True
-		gimbalResponseSpeed = 15
+		@configuration = TR-201
+		!CONFIG[LMDE-H] {}
+		!CONFIG[LMDE-J] {}
+	}
+
+	@MODULE[ModuleGimbal]
+	{
+		@gimbalRange = 4.0
 	}
 }
 
 //	==================================================
-//	Block III SPS plume configuration.
+//	Block V SPS plume configuration.
 //	==================================================
 
-@PART[ROC-ApolloEngineBlockIII]:BEFORE[RealPlume]:NEEDS[!Waterfall]
+@PART[ROC-ApolloEngineBlockV]:BEFORE[RealPlume]:NEEDS[!Waterfall]
 {
 	PLUME
 	{
@@ -132,14 +144,14 @@ PART
 		energy = 1
 		speed = 1
 
-		flarePosition = 0,0,-0.3
-		flareScale = 0.2
+		flarePosition = 0,0,-0.6
+		flareScale = 0.35
 
-		fumePosition = 0,0,0.3
-		fumeScale = 1.25
+		fumePosition = 0,0,0.6
+		fumeScale = 2.0
 
-		streamPosition = 0,0,0.2
-		streamScale = 1.0
+		streamPosition = 0,0,0.55
+		streamScale = 1.7
 	}
 
 	@MODULE[ModuleEngines*]
