--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSMBlockIV.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = ROC-ApolloSMBlockIII
+	name = ROC-ApolloSMDBDBlockIV
 	module = Part
 	author = CobaltWolf
 
@@ -19,7 +19,7 @@ PART
 	rescaleFactor = 1.5646
 
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_stack_top = 0.0, 0.61858, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.82324, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.52776, 0.0, 0.0, -1.0, 0.0, 2
 
 	attachRules = 1,0,1,1,0
@@ -35,10 +35,10 @@ PART
 	cost = 150
 	category = FuelTank
 	subcategory = 0
-	title = #rocApolloSMBlockIIITitle	//Apollo Block III+ Service Module
+	title = #rocApolloSMBlockIVTitle	//Apollo Block IV Service Module
 	manufacturer = #roMfrRockwell
-	description = #rocApolloSMBlockIIIDesc	//Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO and the Service Module was decreased in size and weight. FICTIONAL (Eyes Turned Skyward)
-	specLevel = concept	//ETS Block III is effectively an amalgamation of various Skylab/VFB/AAP proposals
+	description = #rocApolloSMBlockIVDesc	//Enlarged service module to increase cargo capacity of Apollo Block 4. FICTIONAL (Eyes Turned Skyward)
+	specLevel = altHist
 	tags = apollo, block-III, block-3, eyes turned skyward
 
 	bulkheadProfiles = size2
@@ -47,7 +47,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.0377	//Remove about 200 kg for tanks/batteries
+	mass = 1.05	//Remove about 200 kg for tanks/batteries
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -74,37 +74,37 @@ PART
 		textureQuadName = flagDecal2
 	}
 
-	// As stated in the canon, there is only room for 1600 kG of fuel. That doesn't coincide with the amounts we are using in the Block II, so we took the ratio of Block III to Block II.
+	// As stated in the canon, there is only room for 2000 kg of fuel. That doesn't coincide with the amounts we are using in the Block II, so we took the ratio of Block III to Block II.
 	MODULE
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 3000.0
-		basemass = 1.0377
+		volume = 3500.0
+		basemass = 1.05
 		TANK
 		{
 			name = Aerozine50
-			amount = 710.4072
-			maxAmount = 710.4072
+			amount = 888
+			maxAmount = 888
 		}
 		TANK
 		{
 			name = NTO
-			amount = 789.4163
-			maxAmount = 789.4163
+			amount = 986.75
+			maxAmount = 986.75
 		}
 		TANK
 		{
 			name = MMH
-			amount = 100
-			maxAmount = 100
+			amount = 125
+			maxAmount = 125
 		}
 		TANK
 		{
 			// Guess. This will be a bit over probably, but depends on the new SPS
 			name = Helium
-			amount = 20000
-			maxAmount = 20000
+			amount = 25000
+			maxAmount = 25000
 		}
 		TANK
 		{
@@ -117,11 +117,11 @@ PART
 	MODULE
 	{
 		name = ModuleB9DisableTransform
-		transform = Blok4
+		transform = Blok3
 	}
 }
 
-@PART[ROC-ApolloSMBlockIII]:AFTER[zzzRealismOverhaul]
+@PART[ROC-ApolloSMBlockIV]:AFTER[zzzRealismOverhaul]
 {
 	@MODULE[ModuleToggleCrossfeed]
 	{
