--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM(Dprct).cfg
@@ -1,8 +1,8 @@
 PART
 {
-	name = ROC-ApolloCMBlockIII
 	module = Part
-	author = DECQ, Pap, capkirk
+	name = ROC-ApolloCM
+	author = DECQ, Pap
 
 	RSSROConfig = true
 
@@ -25,11 +25,6 @@ PART
 		rotation = 0.0, 180.0, 0.0
 	}
 
-	INTERNAL
-	{
-		name = ApolloCM_Internal
-	}
-
 	scale = 1.0
 	rescaleFactor = 1.0
 
@@ -37,8 +32,10 @@ PART
 	node_stack_para = 0.0, 0.87, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_para2 = 0.0, 1.165, -0.58, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.24, 0.0, 0.0, -1.0, 0.0, 2
-
+	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
+
+	bulkheadProfiles = size1, size2
 
 	CoMOffset = 0.0, -0.25, 0.0
 
@@ -46,27 +43,34 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo Block III+ Command Module (CM)
-	manufacturer = Rockwell International
-	description = Significant changes were made to better adapt Apollo to its new role as a crew shuttle for LEO, and the internal volume was modified to fit 5 crew for reentry. Be sure to bring extra living space by attaching the Mission Module to dock with after orbiting. By only using the Command Module, you will have resources for 5 crew for 72 hours. FICTIONAL (Eyes Turned Skyward)
-
-	TechRequired = start
-	entryCost = 1
-	cost = 1
+	title = Deprecated
+	manufacturer = North American Aviation
+	description = The Command Module of the Apollo spacecraft. Apollo was the spacecraft that transported humans to the Moon in the 1960's and 1970's. It has room for three crew. [Diameter: 3.91 m]
+	
+	mass = 3.234
+	
 	category = Pods
 	subcategory = 0
-
+	
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v
+	
+	TechRequired = unlockParts
+	cost = 1
+	entryCost = 1
 	
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
-	CrewCapacity = 5
-	bulkheadProfiles = size1, size2
-
+	CrewCapacity = 3
+	
+	INTERNAL
+	{
+		name = ApolloCM_Internal
+	}
+	
 	//	============================================================================
 	//	Thermo, Durability
 	//	============================================================================
-
+	
 	//Thermal Stuff
 	//Skin made of Stainless steel, coated with ablative layer of varying thickness, and Klapton insulation
 	//Peak temp on HS: ~3000 K
@@ -82,48 +86,13 @@ PART
 	skinThermalMassModifier = 1.0		//Skin thermal mass. Leave this alone for now
 	skinSkinConductionMult = 0.05		//Skin well insulated and connected with slip-joints. Probably not much conduction.
 	
-	mass = 3.234
 	crashTolerance = 8
 	buoyancy = 1.1
 	breakingForce = 250
 	breakingTorque = 250
+	
 	fuelCrossFeed = true
-
-	//	============================================================================
-	//	Animations and Textures
-	//	============================================================================
-
-	EFFECTS
-	{
-		running
-		{
-			AUDIO_MULTI_POOL
-			{
-				channel = Ship
-				transformName = RCSthruster
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.02 0.1
-				volume = 0.5 0.1
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = RCSthruster
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}		
-	}
-
+	
 	//	============================================================================
 	//	Modules and Resources
 	//	============================================================================
@@ -132,8 +101,7 @@ PART
 	//This actually survives LEO reentry on it's own. Probably not ideal
 	MODULE
 	{
-		name:NEEDS[!DeadlyReentry] = ModuleAblator
-		name:NEEDS[DeadlyReentry] = ModuleHeatShield
+		name = ModuleAblator
 		ablativeResource = Ablator
 		outputResource = CharredAblator
 		outputMult = 0.8
@@ -142,7 +110,6 @@ PART
 		pyrolysisLossFactor = 145833
 		ablationTempThresh = 1250
 		reentryConductivity = 0.0025
-		depletedMaxTemp:NEEDS[DeadlyReentry] = 1200
 		infoTemp = 3000
 	}
 	RESOURCE
@@ -157,7 +124,7 @@ PART
 		maxAmount = 8
 		amount = 0
 	}
-
+	
 	MODULE
 	{
 		name = ModuleCommand
@@ -168,7 +135,7 @@ PART
 			rate = 1.52
 		}
 	}
-
+	
 	MODULE
 	{
 		name = ModuleSAS
@@ -189,7 +156,7 @@ PART
 		storeActionName = Store Experiments
 		storageRange = 2.0
 	}
-
+	
 	MODULE
 	{
 		name = ModuleAnimateGeneric
@@ -200,6 +167,182 @@ PART
 		defaultActionGroup = Light
 	}
 
+	MODULE:NEEDS[RasterPropMonitor]
+	{
+		name = RasterPropMonitorComputer
+		RPM_COLOROVERRIDE
+		{			
+			// NASA gauge ----------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
+				color= 144,139,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
+				color= 184,179,148,255
+			}
+			
+			// ASET aircraft instruments -----------------------------
+			// round gauge backlight
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
+				color = 144,139,118,255
+			}
+		   
+			COLORDEFINITION
+			{
+				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
+				color =184,179,148,255
+			}
+			
+			// switchers -------------------------------------------------
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_NAME_POSITIVECOLOR
+				color= 184,179,158,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_STATE_POSITIVECOLOR
+				color= 154,149,118,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
+				color= 134,129,98,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_MARK_POSITIVECOLOR
+				color= 194,189,158,255
+			}
+			
+			// LEDs off
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_SWITCHER_LEDS_ZEROCOLOR
+				color= 0,0,0,255
+			}
+			
+			// Numeric Input display ---------------------------------------
+			// background			
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
+				color= 0,40,0,255
+			}
+			
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
+				color= 0,40,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
+				color= 0,55,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
+				color= 0,255,0,90
+			}
+			
+			// digital indicator --------------------------------
+			// readout
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_WARNING_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_STBY_COLOR
+				color= 0,255,0,120
+			}			
+			// legend
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
+				color= 0,255,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
+				color= 0,255,0,120
+			}
+			
+			// label plate ---------------------------------------------
+			// background
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
+				color= 80,80,80,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
+				color= 80,80,80,255
+			}
+			
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
+				color= 0,0,0,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
+				color= 0,0,0,255
+			}
+			// label text
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_POSITIVECOLOR
+				color= 174,169,138,255
+			}
+			COLORDEFINITION
+			{
+				name = ASET_PLATETEXT_ZEROCOLOR
+				color= 255,255,255,255
+			}			
+		}
+	}
+	
 	MODULE
 	{
 		name = ModuleRCSFX
@@ -207,7 +350,7 @@ PART
 		thrusterTransformName = RCSthruster
 		thrusterPower = 0.411
 		runningEffectName = running
-
+		
 		PROPELLANT
 		{
 			name = MMH
@@ -226,7 +369,7 @@ PART
 			ratio = 10.0
 			ignoreForIsp = True
 		}
-
+		
 		atmosphereCurve
 		{
 			key = 0 274
@@ -234,14 +377,14 @@ PART
 			key = 4 0.001
 		}
 	}
-
+	
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
 		impassablenodes = para, para2, bottom
 	}
-
+	
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -283,11 +426,11 @@ PART
 			maxAmount = 1010
 		}
 	}
-
+	
 	//	============================================================================
-	//	Comms	
+	//	Comms
 	//	============================================================================
-
+	
 	MODULE:NEEDS[!RemoteTech]
 	{
 		name = ModuleDataTransmitter
@@ -301,14 +444,14 @@ PART
 		packetResourceCost = 0.04
 		DeployFxModules = 0
 	}
-
+	
 	MODULE:NEEDS[RemoteTech]
 	{
 		name = ModuleSPU
 		IsRTCommandStation = False
 		RTCommandMinCrew = 0
 	}
-
+	
 	MODULE:NEEDS[RemoteTech]
 	{
 		name = ModuleRTAntenna
@@ -327,13 +470,47 @@ PART
 			PacketResourceCost = 0.02
 		}
 	}
+	
+	//	============================================================================
+	//	Animations and Textures
+	//	============================================================================
+	
+	EFFECTS
+	{
+		running
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSthruster
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+	}
 }
 
 //	================================================================================
 //	TAC Life Support Compatibility
 //	================================================================================
 
-@PART[ROC-ApolloCMBlockIII]:FOR[RealismOverhaulTACLS]:NEEDS[TacLifeSupport]
+@PART[ROC-ApolloCM]:FOR[RealismOverhaulTACLS]:NEEDS[TacLifeSupport]
 {
 	@description ^= :$: Supports a crew of three for up to 14 days of active operations.
 
@@ -435,209 +612,18 @@ PART
 }
 
 //	================================================================================
-//	Add RasterPropMonitorComputer Module
+//	Final Pass to Make Sure TAC does not add extra resources
 //	================================================================================
 
-@PART[ROC-ApolloCMBlockIII]:NEEDS[RasterPropMonitor]
+@PART[ROC-ApolloCM]:LAST[ROCapsules]
 {
-	MODULE
-	{
-		name = RasterPropMonitorComputer
-		RPM_COLOROVERRIDE
-		{			
-			// NASA gauge ----------------------------------------------
-			COLORDEFINITION
-			{
-				name = ASET_NASAGAUGESCALE_ACTIVECOLOR
-				color= 144,139,118,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NASAGAUGEHAND_ACTIVECOLOR
-				color= 184,179,148,255
-			}
-
-			// ASET aircraft instruments -----------------------------
-			// round gauge backlight
-			COLORDEFINITION
-			{
-				name = ASET_AIRCRAFTGAUGESCALE_ACTIVECOLOR //light on
-				color = 144,139,118,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_AIRCRAFTGAUGEHAND_ACTIVECOLOR //light on
-				color =184,179,148,255
-			}
-
-			// switchers -------------------------------------------------
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_NAME_POSITIVECOLOR
-				color= 184,179,158,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_STATE_POSITIVECOLOR
-				color= 154,149,118,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_BORDER_POSITIVECOLOR
-				color= 134,129,98,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_MARK_POSITIVECOLOR
-				color= 194,189,158,255
-			}
-
-			// LEDs off
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_LEDS_POSITIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_SWITCHER_LEDS_ZEROCOLOR
-				color= 0,0,0,255
-			}
-
-			// Numeric Input display ---------------------------------------
-			// background			
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_ACTIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_DIFFUSE_PASSIVECOLOR
-				color= 0,40,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_ACTIVECOLOR
-				color= 0,40,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_EMISSIVE_PASSIVECOLOR
-				color= 0,0,0,255
-			}
-
-			// readout
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_POSITIVECOLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_ZEROCOLOR
-				color= 0,55,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_NEGATIVECOLOR 
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_NUMINPUT_DISPLAY_GHOSTCOLOR
-				color= 0,255,0,90
-			}
-
-			// digital indicator --------------------------------
-			// readout
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_NORMAL_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_WARNING_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_STBY_COLOR
-				color= 0,255,0,120
-			}
-
-			// legend
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_LEGEND_NORMAL_COLOR
-				color= 0,255,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_DIGITALINDICATOR_LEGEND_STBY_COLOR
-				color= 0,255,0,120
-			}
-
-			// label plate ---------------------------------------------
-			// background
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_DIFFUSE_PASSIVECOLOR
-				color= 80,80,80,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_DIFFUSE_ACTIVECOLOR
-				color= 80,80,80,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_EMISSIVE_PASSIVECOLOR
-				color= 0,0,0,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATEBKG_EMISSIVE_ACTIVECOLOR
-				color= 0,0,0,255
-			}
-
-			// label text
-			COLORDEFINITION
-			{
-				name = ASET_PLATETEXT_POSITIVECOLOR
-				color= 174,169,138,255
-			}
-			COLORDEFINITION
-			{
-				name = ASET_PLATETEXT_ZEROCOLOR
-				color= 255,255,255,255
-			}			
-		}
-	}
-}
-
-//	================================================================================
-//	Configure RealAntennas
-//	================================================================================
-// Four omnidirectional S-band antennas on the CM were used when the attitude of the CSM kept the high-gain antenna from being pointed at Earth. These antennas were also used between SM jettison and landing.
-// https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
-
-@PART[ROC-ApolloCMBlockIII]:BEFORE[RealAntennas]
-{
-	!MODULE[ModuleDataTransmitter],* {}
-	MODULE
-	{
-		name = ModuleRealAntenna
-		referenceGain = 3.0		//Guess based on Block II
-		RFBand = S		//Default to S-band
-	}
+	!RESOURCE:HAS[~name[Ablator],~name[CharredAblator]],*{}
 }
 
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul]
+@PART[ROC-ApolloCM]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3000		//Keep this lower to "discourage" attempting reentry without HS
 }
