--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueDockPort(Dprct).cfg
@@ -31,7 +31,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo Drogue Docking Port
+	title = Deprecated
 	manufacturer = North American Aviation
 	description = This is the drogue (accepting) part of the Apollo Docking System. It will only work with the Apollo Command Module Probe.
 	
