--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute(Dprct).cfg
@@ -1,7 +1,7 @@
 PART
 {
 	module = Part
-	name = ROC-ApolloParachute
+	name = ROC-ApolloDrogueParachute
 	author = DECQ, Pap
 	
 	RSSROConfig = true
@@ -12,34 +12,35 @@ PART
 	
 	MODEL
 	{
-		model = ROCapsules/Assets/DECQ/Apollo/Parachute
+		model = ROCapsules/Assets/DECQ/Apollo/DroguePara
 		scale = 1.0, 1.0, 1.0
+		rotation = 0, 180, 0
 	}
 	
 	scale = 1.0
 	rescaleFactor = 1.0
 	
 	
-	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 0.0, -0.9, 0.0, -1.0, 0.0, 1
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,0,0
 	
-	bulkheadProfiles = size2
+	bulkheadProfiles = size1, size2
 		
 	//	============================================================================
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo Main Parachute Pack
+	title = Deprecated
 	manufacturer = Northrop Corp.
-	description = The main parachute pack of the Apollo Command Module. Attach this to the central top node before placing the Forward Heat Shield.
+	description = The drogue parachute pack is meant to slow down the Apollo spacecraft at a high altitude in preparation for the deployment of the main parachute pack. Attach this to the front node before placing the Forward Heat Shield.
 	
-	mass = 0.175
+	mass = 0.025
 	
 	category = Utility
 	subcategory = 0
 	
-	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, para, parachute
+	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, drogue, para, parachute
 	
 	TechRequired = unlockParts
 	cost = 150
@@ -83,20 +84,22 @@ PART
 		fullyDeployedDrag = 3
 		minAirPressureToOpen = 0.02
 		clampMinAirPressure = 0.02
-		deployAltitude = 3350
-		deploymentSpeed = 2.5
-		semiDeploymentSpeed = 5.0
-		chuteMaxTemp = 473.15
+		deployAltitude = 7625
+		deploymentSpeed = 10.0
+		semiDeploymentSpeed = 1.6
+		chuteMaxTemp = 7500
 		chuteThermalMassPerArea = 0.09
 	}
 	
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.1106
+		caseMass = 0.0206
+		timer = 0
 		mustGoDown = True
 		spareChutes = 0
 		cutSpeed = 0.5
+		secondaryChute = False
 
 		PARACHUTE
 		{
@@ -107,13 +110,13 @@ PART
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 19.1
-			preDeploymentSpeed = 6.0
-			minDeployment = 3660
-			deployedDiameter = 38.1
+			preDeployedDiameter = 5.2
+			preDeploymentSpeed = 1.6
+			minDeployment = 7625
+			deployedDiameter = 10.0
 			deploymentSpeed = 10.0
-			deploymentAlt = 3350
-			cutAlt = 0
+			deploymentAlt = 7315
+			cutAlt = 3350
 		}
 	}
 	
@@ -121,13 +124,13 @@ PART
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.9375
+		dragModifier = 0.78125
 	}
 	MODULE
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 3.125
+		dragModifier = 1.25
 	}
 	
 	//	============================================================================
@@ -184,16 +187,17 @@ PART
 	}
 }
 
-@PART[ROC-ApolloParachute]:AFTER[zzzRealismOverhaul]
+@PART[ROC-ApolloDrogueParachute]:AFTER[zzzRealismOverhaul]
 {
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
-	// Get back our historical numbers
+	// which would make the drogue cut before it even deploys. Get back
+	// our historical numbers
 	@MODULE[RealChuteModule]
 	{
 		@PARACHUTE
 		{
-			@minDeployment = 3660
-			@deploymentAlt = 3350
+			@minDeployment = 7525
+			@deploymentAlt = 7315
 		}
 	}	 
 }
