--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA(Dprct).cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA(Dprct).cfg
@@ -30,7 +30,7 @@ PART
 	//	Title, Description, Category, Techs
 	//	============================================================================
 	
-	title = Apollo High Gain Antenna (HGA)
+	title = Deprecated
 	manufacturer = Dalmo Victor Co.
 	description = The primary High Gain Antenna of the Apollo Spacecraft. Attach to the bottom of the Service Module in the grooved node.
 	
